# RentalShop

./: .env  README.md  Travel Partner.pptx  app.py  chabot.ipynb  chatbot.ipynb  main.py  pyproject.toml  requirements.txt
app/core/: config.py
app/models/: chat.py  vehicle.py
chroma_db/: chroma.sqlite3
chroma_db/5b3a7c24-af13-4742-bbfa-9a5e9b55220b/: index_metadata.pickle
db/: vehicle_lookup.txt  vehicledb.sqlite
