[project]
name = "rentalshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "fastapi>=0.104.0",
    "ipykernel>=6.29.5",
    "langchain>=0.1.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.4.8",
    "nltk>=3.9.1",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.5",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "uvicorn>=0.24.0",
]
